--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculadora de comsión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges">
-    <meta property="og:image" content="./img/socialshared.png">
+    <meta property=”og:title” content=”Comision App - Calculadora de Comisión y Descuentos”>
+    <meta property=”og:description” content=”Calculadora de comsión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges”>
+    <meta property="og:image" content="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/socialshared.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Comision App - Calculadora de Comisión</title>
+    <title>Comision App - Calculadora de Comisión y Descuentos</title>
 </head>
 
 <body>
