--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Calculadora de comsión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges">
+    <meta name="description" content="Calculadora de comisión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges">
     <meta property=”og:title” content=”Comision App - Calculadora de Comisión y Descuentos”>
-    <meta property=”og:description” content=”Calculadora de comsión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges”>
+    <meta property=”og:description” content=”Calculadora de comisión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges”>
     <meta property="og:image" content="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/socialshared.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
