--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta property=”og:title” content=”Comision App - Calculadora de Comisión y Descuentos”>
     <meta property=”og:description” content=”Calculadora de comisión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges”>
     <meta property="og:image" content="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/socialshared.png">
+    <meta name=”twitter:title” content=”Comision App - Calculadora de Comisión y Descuentos”>
+    <meta name=”twitter:description” content=”Calculadora de comisión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges”>
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/socialshared.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
