--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             </div>
         </div>
     </div>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="userinterfake" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
     <script src="main.js"></script>
 </body>
 
