--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Calculadora de comisión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges">
-    <meta property=”og:title” content=”Comision App - Calculadora de Comisión y Descuentos”>
-    <meta property=”og:description” content=”Calculadora de comisión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges”>
+    <meta name="description" content="Cobrar lo que estas buscando cobrar con Comisionapp es fácil. Ingresa la comisión, el monto y obtén los resultados">
+    <meta property=”og:title” content=”Comision App - Calculadora de Comisión”/>
+    <meta property=”og:description” content=”Cobrar lo que estas buscando cobrar con Comisionapp es fácil. Ingresa la comisión, el monto y obtén los resultados”/>
     <meta property="og:image" content="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/socialshared.png">
     <meta name=”twitter:title” content=”Comision App - Calculadora de Comisión y Descuentos”>
     <meta name=”twitter:description” content=”Calculadora de comisión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges”>
@@ -17,7 +17,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Comision App - Calculadora de Comisión y Descuentos</title>
+    <title>Comision App - Calculadora de Comisión</title>
 </head>
 
 <body>
