--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <div class="contenedor2">
 
-                <h1>Gana tiempo con <span style="color: #0F62EA;">comision app</span></h1>
+                <h1>Gana tiempo con <span style="color: #0F62EA;">Comisionapp</span></h1>
                 <p><big>Factura lo que quieres, cobra lo que buscas y obtén lo que mereces sin cálculos extraños.</big></p>
 
                 <div class="divisor"></div>
