--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cobrar lo que estas buscando cobrar con Comisionapp es fácil. Ingresa la comisión, el monto y obtén los resultados">
-    <meta property=”og:title” content=”Comision App - Calculadora de Comisión”/>
-    <meta property=”og:description” content=”Cobrar lo que estas buscando cobrar con Comisionapp es fácil. Ingresa la comisión, el monto y obtén los resultados”/>
+    <meta name="description" content="Cobrar lo que estas buscando cobrar con ComisionApp es fácil. Ingresa la comisión, el monto y obtén los resultados">
+    <meta property=”og:title” content=”ComisionApp - Calculadora de Comisión”/>
+    <meta property=”og:description” content=”Cobrar lo que estas buscando cobrar con ComisionApp es fácil. Ingresa la comisión, el monto y obtén los resultados”/>
     <meta property="og:image" content="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/socialshared.png">
-    <meta name=”twitter:title” content=”Comision App - Calculadora de Comisión y Descuentos”>
-    <meta name=”twitter:description” content=”Calculadora de comisión para cobrar lo que estas buscando cobrar - Gumroad, Patreon u Onlyfans, tu eliges”>
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/socialshared.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Comision App - Calculadora de Comisión</title>
+    <title>ComisionApp - Calculadora de Comisión</title>
 </head>
 
 <body>
