--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cobrar lo que estas buscando cobrar con ComisionApp es fácil. Ingresa la comisión, el monto y obtén los resultados">
+    <meta name="description" content="Cobrar lo que estas buscando cobrar con ComisionApp es fácil. Ingresa la comisión, el monto y obtén los resultados.">
     <meta property=”og:title” content=”ComisionApp - Calculadora de Comisión”/>
-    <meta property=”og:description” content=”Cobrar lo que estas buscando cobrar con ComisionApp es fácil. Ingresa la comisión, el monto y obtén los resultados”/>
+    <meta property=”og:description” content=”Cobrar lo que estas buscando cobrar con ComisionApp es fácil. Ingresa la comisión, el monto y obtén los resultados.”/>
     <meta property="og:image" content="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/socialshared.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
