--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/userinterfake/comision-app/main/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>ComisionApp - Calculadora de Comisión</title>
 </head>
