--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@
             </div>
 
             <div class="contenedor4">
-                <p class="smaller">Diseño: <a href="https://userinterfake.com/" target="_blank">Trinidad Pilu</a> - Desarrollo: <a href="https://github.com/DiegoBustos96" target="_blank"> Diego Bustos </a>
-                    <br>
-                    Versión 1.0.0</p>
+                    <a href="mailto:comisionapp@outlook.com"><button class="small-button smaller">Envíanos tus comentarios</button></a>
+                    <p class="smaller">Hecho con amor desde Viña del Mar - Chile
+                        <br>
+                        <a href="https://github.com/userinterfake/comision-app/blob/main/CHANGELOG.md"
+                            target="_blank">V0.5.6 - Changelog</a>
+                    </p>
             </div>
         </div>
     </div>
