--- a/index.html
+++ b/index.html
@@ -104,12 +104,11 @@
             </div>
 
             <div class="contenedor4">
-                    <a href="mailto:comisionapp@outlook.com"><button class="small-button smaller">Envíanos tus comentarios</button></a>
-                    <p class="smaller">Hecho con amor desde Viña del Mar - Chile
+                        <p class="smaller">Hecho con amor desde Viña del Mar - Chile
                         <br>
                         <a href="https://github.com/userinterfake/comision-app/blob/main/CHANGELOG.md"
-                            target="_blank">V0.5.6 - Changelog</a>
-                    </p>
+                            target="_blank">V0.5.6 - Changelog</a></p>
+                    <a href="mailto:comisionapp@outlook.com"><button class="small-button smaller">Envíanos tus comentarios</button></a>
             </div>
         </div>
     </div>
