--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
                 <div class="divisor"></div>
 
-                <div class="contenedor3">
+<div class="contenedor3">
                     <!-- Contenedor con Grid -->
-
+                    <!-- Se agrega nuevas funciones para hacer los cambios entre montos y comisiones -->
                     <div>
                         <p><small>Ingresa la comisión:</small></p>
                         <div class="input-on">
-                            <!-- SE AGREGA LA ETIQUETA <LABEL> PARA QUE INTERACTÚEN CON LOS <INPUT> Y ASÍ REALIZAR EL CAMBIO DE OPACIDAD A LOS SÍMBOLOS  -->
+
                             <input name="uno" placeholder="19" onkeyup="mostrarComision()" inputmode="decimal"
                                 id="comision"
                                 oninput="this.value = this.value.replace(/[^0-9.,]/g, '').replace(/(\..*)\./g, '$1'); this.value = this.value.replace(/,/g, '.');">
@@ -80,18 +80,21 @@
                     <div>
                         <p><small>Ingresa el monto:</small>
                         <div class="input-on">
-                            <input name="dos" onkeyup="mostrarComision()" inputmode="decimal" id="monto" oninput="this.value = this.value.replace(/[^0-9.,]/g, '').replace(/(\..*)\./g, '$1'); this.value = this.value.replace(/,/g, '.');" placeholder="95000">
+                            <input name="dos" onkeyup="mostrarComision()" inputmode="decimal" id="monto"
+                                oninput="this.value = this.value.replace(/[^0-9.,]/g, '').replace(/(\..*)\./g, '$1'); this.value = this.value.replace(/,/g, '.');"
+                                placeholder="95000">
                             <label for="dos" class="simbolo">$</label>
                         </div>
                     </div>
-                    <div>
+                    <!-- SE AGREGA LA ETIQUETA <LABEL> PARA QUE INTERACTÚEN CON LOS <INPUT> Y ASÍ REALIZAR EL CAMBIO DE OPACIDAD A LOS SÍMBOLOS  -->
+                    <div id="datos1" class="dato">
                         <p><small>Monto con descuento:</small></p>
                         <div class="input-off">
                             <input name="tres" type="number" id="montoDescuento" placeholder="76950" readonly>
                             <label for="tres" class="simbolo">$</label>
                         </div>
                     </div>
-                    <div>
+                    <div id="datos2" class="dato">
                         <p><small>Monto como objetivo:</small></p>
                         <div class="input-off">
                             <input name="cuatro" type="number" id="montoObjetivo" placeholder="117284" readonly>
@@ -99,6 +102,30 @@
                         </div>
                     </div>
 
+                    <!-- Nuevos inputs "Comisión (Descuentos/objetivo)"-->
+
+                    <div id="otros1" class="otro hidden">
+                        <p><small>Comision descuento:</small></p>
+                        <div class="input-off">
+                            <input name="cinco" type="number" id="comisionDescuento" placeholder="117284" readonly>
+                            <label for="cinco" class="simbolo">$</label>
+                        </div>
+                    </div>
+                    <div id="otros2" class="otro hidden">
+                        <p><small>Comision objetivo:</small></p>
+                        <div class="input-off">
+                            <input name="seis" type="number" id="comisionObjetivo" placeholder="76950" readonly>
+                            <label for="seis" class="simbolo">$</label>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <!-- Nuevo contenedor para botón monto/comisiones -->
+                <div class="btn-container">
+                    <!-- Se agrega botón para realizar cambio entre elementos -->
+                    <button id="toggle-btn">Mostrar Comisiones</button>
                 </div>
 
             </div>
