--- a/index.html
+++ b/index.html
@@ -131,11 +131,13 @@
             </div>
 
             <div class="contenedor4">
-                        <p class="smaller">Hecho con amor desde Viña del Mar - Chile
-                        <br>
-                        <a href="https://github.com/userinterfake/comision-app/blob/main/CHANGELOG.md"
-                            target="_blank">V0.5.6 - Changelog</a></p>
-                    <a href="mailto:comisionapp@outlook.com"><button class="small-button smaller">Envíanos tus comentarios</button></a>
+                <a href="mailto:comisionapp@outlook.com"><button class="small-button smaller">Envíanos tus
+                        comentarios</button></a>
+                <p class="smaller">Hecho con amor desde Viña del Mar - Chile
+                    <br>
+                    <a href="https://github.com/userinterfake/comision-app/blob/main/CHANGELOG.md"
+                        target="_blank">V0.5.6 - Changelog</a>
+                </p>
             </div>
         </div>
     </div>
