--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                     <!-- Nuevos inputs "Comisión (Descuentos/objetivo)"-->
 
                     <div id="otros1" class="otro hidden">
-                        <p><small>Comision descuento:</small></p>
+                        <p><small>Comisión descuento:</small></p>
                         <div class="input-off">
                             <input name="cinco" type="number" id="comisionDescuento" placeholder="18050" readonly>
                             <label for="cinco" class="simbolo">$</label>
                         </div>
                     </div>
                     <div id="otros2" class="otro hidden">
-                        <p><small>Comision objetivo:</small></p>
+                        <p><small>Comisión objetivo:</small></p>
                         <div class="input-off">
                             <input name="seis" type="number" id="comisionObjetivo" placeholder="22284" readonly>
                             <label for="seis" class="simbolo">$</label>
